Bug 1283036 - Don't define kVK_RightCommand when building against the macOS 10.12 SDK. r=masayuki, a=gchang

kVK_RightCommand is already defined in Carbon.framework in 10.12.

MozReview-Commit-ID: 5QWRK4Gokg8